--- a/Jarvis/index.html
+++ b/Jarvis/index.html
@@ -15,7 +15,7 @@
                 <img src="./Assets/Images/J_A_R_V_I_S_live_wallpaper.gif" alt="image">
             </div>
             <h1>J A R V I S</h1>
-            <p>I m a Virtual Assistant JARVIS, How may I help you?</p>
+            <p>Your Virtual Assistant</p>
         </div>
         <div class="input">
             <button class="talk"><i class="fas fa-microphone-alt"></i></button>
