--- a/Restaurent/Restaurent_.html
+++ b/Restaurent/Restaurent_.html
@@ -22,6 +22,7 @@
                     <li><a href="#menu">Menu</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#order">Order</a></li>
+                    <li><a href="#cart">Cart</a></li>
                 </ul>
             </nav>
             <div id="mobile">
